2.1.0/_sources/gallery/lines_bars_and_markers/step_demo.rst.txt


.. _sphx_glr_gallery_lines_bars_and_markers_step_demo.py:


=========
Step Demo
=========

Example step plots.




.. image:: /gallery/lines_bars_and_markers/images/sphx_glr_step_demo_001.png
    :align: center





.. code-block:: python

    import numpy as np
    from numpy import ma
    import matplotlib.pyplot as plt

    x = np.arange(1, 7, 0.4)
    y0 = np.sin(x)
    y = y0.copy() + 2.5

    plt.step(x, y, label='pre (default)')

    y -= 0.5
    plt.step(x, y, where='mid', label='mid')

    y -= 0.5
    plt.step(x, y, where='post', label='post')

    y = ma.masked_where((y0 > -0.15) & (y0 < 0.15), y - 0.5)
    plt.step(x, y, label='masked (pre)')

    plt.legend()

    plt.xlim(0, 7)
    plt.ylim(-0.5, 4)

    plt.show()

**Total running time of the script:** ( 0 minutes  0.023 seconds)



.. container:: sphx-glr-footer


  .. container:: sphx-glr-download

     :download:`Download Python source code: step_demo.py <step_demo.py>`



  .. container:: sphx-glr-download

     :download:`Download Jupyter notebook: step_demo.ipynb <step_demo.ipynb>`

.. rst-class:: sphx-glr-signature

    `Generated by Sphinx-Gallery <https://sphinx-gallery.readthedocs.io>`_
